# drift

./: Cargo.toml  PLAN.md  README.md
drift-cli/: Cargo.toml
drift-cli/src/: coord.rs  ipc.rs  main.rs  node.rs  shm.rs
drift-cli/tests/: helper_allreduce.py  test_python_ipc.rs
drift-coord/: Cargo.toml
drift-coord/src/: checkpoint.rs  lib.rs  main.rs  monitor.rs  scheduler.rs
drift-node/: Cargo.toml
drift-node/src/: gpu.rs  lib.rs  main.rs  network.rs  training.rs
drift-proto/: Cargo.toml
drift-proto/src/: allreduce.rs  lib.rs  ring.rs
drift-proto/tests/: integration.rs  ring_allreduce.rs  ring_connect.rs  stress.rs  training.rs
drift-python/: README.md  pyproject.toml  setup.py
drift-python/drift/: __init__.py  allreduce.py  process_group.py  shm.py
drift-python/tests/: test_ipc_roundtrip.py  test_process_group.py  test_shm.py
examples/: mock_train.py  train.yaml  train_cifar.py
