[workspace]
members = ["drift-node", "drift-coord", "drift-proto"]
resolver = "2"

[workspace.dependencies]
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
