[package]
name = "drift-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
drift-proto = { path = "../drift-proto" }
iroh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
