[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-dist"
version = "0.1.0"
description = "PyTorch DDP backend for drift P2P distributed training"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest>=7.0"]
